smartbrain/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: mosabami/smartbrainclient:v11 # update this to use the image in your registry eg <acrName>.azurecr.io/smartbrain/smartbrainclient
        resources:
        ports:
        - containerPort: 3000
