smartbrain/k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: LoadBalancer
  selector:
    component: web
  ports:
  - port: 3000
    targetPort: 3000
